# OneM2MC

./: .autotools  .cproject  .project  Makefile  Makefile.am  README.md  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
cse/: CSEApi.cc  CSEApi.h  CSEHandler.cc  CSEHandler.h  CSEMain.cc  CSEResourceStore.h  CSEServer.cc  CSEServer.h  in-cse.json
cse/test/: AE-sim.cc
include/: AE.h  AEAnnc.h  ApiCallCache.h  CSEBase.h  CommonTypes.h  CommonUtils.h  Constants.h  CopyMessage.pb.h  IApiCallBack.h  MapCache.h  NSEBase.h  RemoteCSE.h  Request.h  RequestCache.h  RequestCreateHandler.h  RequestHandler.h  RequestPrim.h  RequestUpdateHandler.h  ResourceBase.h  ResourceBaseAnnc.h  ResourceStore.h  Response.h  ResponsePrim.h
nse/: CoAPInt.h  NSEBase.cc  NSECoAPBinding.cc  NSECoAPBinding.h
resource/: AE.proto  CSEBase.proto  CoAPBinding.proto  CommonTypes.proto  FilterCriteria.proto  RemoteCSE.proto  Request.proto  RequestPrim.proto  ResourceBase.proto  Response.proto  ResponsePrim.proto
src/: AE.cc  AEAnnc.cc  ApiCallCache.cc  CSEBase.cc  CommonUtils.cc  Constants.cc  CopyMessage.pb.cc  RemoteCSE.cc  Request.cc  RequestCache.cc  RequestHandler.cc  RequestPrim.cc  ResourceBase.cc  ResourceBaseAnnc.cc  Response.cc  ResponsePrim.cc
src-gen/: AE.pb.cc  AE.pb.h  CSEBase.pb.cc  CSEBase.pb.h  CoAPBinding.pb.cc  CoAPBinding.pb.h  CommonTypes.pb.cc  CommonTypes.pb.h  FilterCriteria.pb.cc  FilterCriteria.pb.h  RemoteCSE.pb.cc  RemoteCSE.pb.h  Request.pb.cc  Request.pb.h  RequestPrim.pb.cc  RequestPrim.pb.h  ResourceBase.pb.cc  ResourceBase.pb.h  Response.pb.cc  Response.pb.h  ResponsePrim.pb.cc  ResponsePrim.pb.h
store/: FakeStore.cc
utest/common/: test_utils.cc  test_utils.h
utest/data/: in-cse.json  retrieve-in-cse.json
utest/data/.store/: Z0005.lnk  root  root.lnk
utest/data/.store/microwireless.com/IN-CSE-01/: IN-CSE-01.res
utest/gmock/: NSEBase_mock.cc  NSEBase_mock.h  gmock_common.h  gmock_main.cc  test_AE.cc  test_CSEBase.cc
utest/gmock/CoAPInt_mock/: CoAPInt_mock.cc  CoAPInt_mock.h  test_AE.cc  test_CSEBase.cc
utest/gmock/NSEBase_mock/: NSEBase_mock.cc  NSEBase_mock.h  test_AE.cc  test_AEAnnc.cc  test_CSEBase.cc  test_RegisterCSE.cc  test_RemoteCSE.cc
utest/gtest/: mock_NSEBase.cc  test_AE.cc  test_AEAnnc.cc  test_CSEBase.cc  test_CommonUtils.cc  test_CopyMessage.pb.cc  test_RemoteCSE.cc  test_Request.cc  test_RequestCache.cc  test_RequestHandler.cc  test_RequestPrim.cc  test_ResourceBase.cc  test_ResourceBaseAnnc.cc  test_ResourceStore.cc  test_Response.cc  test_ResponsePrim.cc  test_utils.cc  test_utils.h
